# rdtsc-bsd

./: rdtsc-bsd.cabal
cbits/: rdtsc.c
src/System/CPUTime/: Rdtsc.hs
