name:          rdtsc-bsd
version:       0.1.0.0
synopsis:      Access to the time stamp counter (rdtsc)
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    Jacob Stanley <jacob@stanley.io>
copyright:     Copyright (c) 2012, Jacob Stanley
category:      System
build-type:    Simple
cabal-version: >= 1.2

library
  hs-source-dirs: src

  exposed-modules: System.CPUTime.Rdtsc

  build-depends: base == 4.*

  c-sources: cbits/rdtsc.c
  cc-options: -Wall -Werror -O3

  ghc-options: -O2 -Wall
